# StarkMate

./: .gitignore  README.md  package-lock.json
agent-engines/: main.py  (+1 more)
backend/: .env.example  Cargo.toml  cargo.toml
backend/db/: README.md
backend/docs/: chess960.md
backend/modules/: Cargo.toml
backend/modules/api/: API_DOCUMENTATION_GUIDE.md  Cargo.toml  README.md  openapi.yaml
backend/modules/api/scripts/: generate-client-sdks.sh
backend/modules/api/src/: ai.rs  auth.rs  games.rs  lib.rs  main.rs  openapi.rs  players.rs  server.rs  ws.rs
backend/modules/api/src/test/: mod.rs
backend/modules/chess/src/: game.rs  lib.rs  time_control.rs
backend/modules/chess/src/bitboard/: Bitboard.rs  Board.rs  mod.rs
backend/modules/chess/src/db/: schema.rs
backend/modules/chess/tests/: board_tests.rs  time_control_tests.rs
backend/modules/db/: Cargo.toml
backend/modules/db/entity/: Cargo.toml  game.rs  game_move.rs  game_player_state.rs  mod.rs
backend/modules/db/entity/src/: game.rs  lib.rs  player.rs  prelude.rs
backend/modules/db/src/: db.rs  lib.rs
backend/modules/dto/: Cargo.toml
backend/modules/dto/src/: ai.rs  auth.rs  games.rs  lib.rs  players.rs  responses.rs
backend/modules/error/: Cargo.toml
backend/modules/error/src/: error.rs
backend/modules/matchmaking/: mod.rs  models.rs  routes.rs  service.rs
backend/modules/security/: Cargo.toml
backend/modules/security/src/: jwt.rs  main.rs
backend/modules/service/: Cargo.toml
backend/modules/service/src/: lib.rs  players.rs
backend/modules/src/: main.rs  migration .sql
backend/modules/src/db/: game_queries.rs
backend/modules/src/models/: game.rs
backend/modules/src/routes/: games.rs
backend/modules/src/services/: game_services.rs
backend/modules/src/tests/: game_creation.rs
backend/modules/src/utils/: fen_generator.rs
backend/modules/st_core/: Cargo.toml
backend/modules/user/src/: User.rs  UserAuth.rs  UserForm.rs
backend/resources/: chess960_complete.json  chess960_fens.json
backend/src/: Cargo.toml  board.rs  fen.rs  lib.rs  main.rs  moves.rs  validator.rs
backend/src/benches/: validation_bench.rs
backend/src/chess960/: README.md  api.rs  generator.rs  mod.rs  models.rs  positions.rs  test.rs  tests.rs  validator.rs
backend/src/socket/: game.rs  handlers.rs  lib.rs  main.rs  models.rs  websocket.rs
backend/src/tests/: benchmark_tests.rs  integration_tests.rs  validation_tests.rs
(+97 files in other folders)
