[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
lazy_static = "1.4"
env_logger = "0.11"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono"] }

[dev-dependencies]
tokio-test = "0.4"
