[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
db = { path = "../db" }
dto = { path = "../dto" }
service = { path = "../service" }
error = { path = "../error" }
entity = { path = "../db/entity" }
