[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.8"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

db = { path = "../db" }
dto = { path = "../dto" }
service = { path = "../service" }
error = { path = "../error" }
entity = { path = "../db/entity" }
